--- a/wp-content/themes/vantagex/css/style.css
+++ b/wp-content/themes/vantagex/css/style.css
@@ -1,4 +1,4 @@
-@import url(../bower_components/animate.css/animate.css);/*! normalize.css v3.0.0 | MIT License | git.io/normalize */html {
+@import url(../bower_components/animate.css);/*! normalize.css v3.0.0 | MIT License | git.io/normalize */html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
